deploy/k8s/bg-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: ps-background-service
  namespace: ps
  labels:
    app: ps-background
spec:
  selector:
    app: ps-background
  ports:
    - protocol: TCP
      port: 5002
      targetPort: 5002
