deploy/k8s/db-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: ps-database-service
  namespace: ps
  labels:
    app: ps-database
spec:
  selector:
    app: ps-database
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
