deploy/k8s/fe-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: ps-frontend-service
  namespace: ps
  labels:
    app: ps-frontend
spec:
  selector:
    app: ps-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
