deploy/k8s/psbg-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ps
  name: psbg
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}, {"HTTPS": 5001}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-1:851725219470:certificate/22cf77ae-5145-47a8-acf4-a321f44cfb0c
    alb.ingress.kubernetes.io/successCodes: "200,201,202,204,206,302"
spec:
  ingressClassName: alb
  rules:
    - host: psbg-psdemo.adnovumlabs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ps-background-service
                port:
                  number: 5001
